feat: Update product images and details in index.html
- Replaced existing vase images with new ring images in the HTML structure for improved visual representation.
- Updated product title and description to reflect the new focus on a golden ring, enhancing the product's appeal.
- Added multiple new ring image files to the assets directory to support the updated references.

--- a/corano/index.html
+++ b/corano/index.html
@@ -450,53 +450,55 @@
                     <!-- First set of columns -->
                     <!-- First column -->
                     <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-1.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-2.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-3.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                        <!-- <div class="marquee-item"><img src="assets/draggable-grid-public/img-2.png" alt="Vase Collection" /></div> -->
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
                     </div>
                     <!-- Second column -->
                     <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-2.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-4.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-6.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
                     </div>
                     <!-- Third column -->
                     <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-3.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-5.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-7.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
                     </div>
                     <!-- Fourth column -->
                     <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-4.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-6.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-1.png" alt="Vase Collection" /></div>
+                        <!-- <div class="marquee-item"><img src="assets/draggable-grid-public/img-4.png" alt="Vase Collection" /></div> -->
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-6.png" alt="Vase Collection" /></div>
                     </div>
 
                     <!-- Duplicate set for seamless loop -->
                     <!-- First column (duplicate) -->
                     <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-1.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-2.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-3.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
                     </div>
                     <!-- Second column (duplicate) -->
                     <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-2.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-4.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-6.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
                     </div>
                     <!-- Third column (duplicate) -->
                     <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-3.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-5.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-7.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-6.png" alt="Vase Collection" /></div>
                     </div>
                     <!-- Fourth column (duplicate) -->
                     <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-4.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-6.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/img-1.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
+                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
                     </div>
                 </div>
             </div>
@@ -508,12 +510,12 @@
         <div class="vase-details-panel" id="vaseDetailsPanel">
             <button class="vase-details-close" id="vaseDetailsClose">×</button>
             <div class="vase-details-content">
-                <h3 class="vase-details-title">Yellow Vase</h3>
+                <h3 class="vase-details-title">Golden Ring</h3>
                 <div class="vase-details-thumb" id="vaseDetailsThumb"></div>
                 <div class="vase-details-info">
                     <div class="vase-details-price">$300.00</div>
                     <div class="vase-details-description">
-                        Generous in size and striking in presence, the large yellow vase makes a bold decorative statement. Its smooth curves and sunny shade are perfect for standing on the floor or dressing up a wide console. Both functional and eye-catching, it brings vitality and a contemporary edge to your interior design.
+                        Generous in size and striking in presence, the large golden ring makes a bold decorative statement. Its smooth curves and sunny shade are perfect for standing on the floor or dressing up a wide console. Both functional and eye-catching, it brings vitality and a contemporary edge to your interior design.
                     </div>
                     <button class="vase-details-add-cart">Add to Cart</button>
                 </div>
