feat: Update product images and enhance HTML structure
- Replaced existing product images in the index and product details pages with new images for gold jewelry and diamond rings, improving visual appeal.
- Added new image files for earrings and rings to the assets directory to support updated references.
- Adjusted HTML structure for the draggable product marquee to include new images, ensuring a seamless user experience.

--- a/corano/index.html
+++ b/corano/index.html
@@ -444,65 +444,65 @@
 
 
         <!-- vase marquee area start -->
-        <section class="draggable-product-marquee">
-            <div class="marquee-wrapper">
-                <div class="grid">
-                    <!-- First set of columns -->
-                    <!-- First column -->
-                    <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
-                        <!-- <div class="marquee-item"><img src="assets/draggable-grid-public/img-2.png" alt="Vase Collection" /></div> -->
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
-                    </div>
-                    <!-- Second column -->
-                    <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
-                    </div>
-                    <!-- Third column -->
-                    <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
-                    </div>
-                    <!-- Fourth column -->
-                    <div class="column">
-                        <!-- <div class="marquee-item"><img src="assets/draggable-grid-public/img-4.png" alt="Vase Collection" /></div> -->
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-6.png" alt="Vase Collection" /></div>
-                    </div>
+            <section class="draggable-product-marquee">
+                <div class="marquee-wrapper">
+                    <div class="grid">
+                        <!-- First set of columns -->
+                        <!-- First column -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <!-- <div class="marquee-item"><img src="assets/draggable-grid-public/img-2.png" alt="Vase Collection" /></div> -->
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Second column -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Third column -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Fourth column -->
+                        <div class="column">
+                            <!-- <div class="marquee-item"><img src="assets/draggable-grid-public/img-4.png" alt="Vase Collection" /></div> -->
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                        </div>
 
-                    <!-- Duplicate set for seamless loop -->
-                    <!-- First column (duplicate) -->
-                    <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
-                    </div>
-                    <!-- Second column (duplicate) -->
-                    <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
-                    </div>
-                    <!-- Third column (duplicate) -->
-                    <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-6.png" alt="Vase Collection" /></div>
-                    </div>
-                    <!-- Fourth column (duplicate) -->
-                    <div class="column">
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
-                        <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        <!-- Duplicate set for seamless loop -->
+                        <!-- First column (duplicate) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Second column (duplicate) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Third column (duplicate) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-4.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Fourth column (duplicate) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
         <!-- vase marquee area end -->
 
         <!-- Vase Details Panel -->
@@ -1833,10 +1833,11 @@
                             <div class="col-lg-5">
                                 <div class="product-large-slider">
                                     <div class="pro-large-img img-zoom">
-                                        <img src="assets/img/product/product-details-img1.jpg" alt="product-details" />
+                                        <!-- <img src="assets/img/product/product-details-img1.jpg" alt="product-details" /> -->
+                                        <img src="assets/img/product/gold-jewelry.jpeg" alt="product-details" />
                                     </div>
                                     <div class="pro-large-img img-zoom">
-                                        <img src="assets/img/product/product-details-img2.jpg" alt="product-details" />
+                                        <img src="assets/img/product/gold-jewelry.jpeg" alt="product-details" />
                                     </div>
                                     <div class="pro-large-img img-zoom">
                                         <img src="assets/img/product/product-details-img3.jpg" alt="product-details" />
@@ -1850,7 +1851,8 @@
                                 </div>
                                 <div class="pro-nav slick-row-10 slick-arrow-style">
                                     <div class="pro-nav-thumb">
-                                        <img src="assets/img/product/product-details-img1.jpg" alt="product-details" />
+                                        <!-- <img src="assets/img/product/product-details-img1.jpg" alt="product-details" /> -->
+                                        <img src="assets/img/product/gold-jewelry.jpeg" alt="product-details" />
                                     </div>
                                     <div class="pro-nav-thumb">
                                         <img src="assets/img/product/product-details-img2.jpg" alt="product-details" />
