--- a/corano/product-details.html
+++ b/corano/product-details.html
@@ -479,36 +479,37 @@
                                 <div class="col-lg-5">
                                     <div class="product-large-slider">
                                         <div class="pro-large-img img-zoom">
-                                            <img src="assets/img/product/product-details-img1.jpg" alt="product-details" />
+                                            <!-- <img src="assets/img/product/product-details-img1.jpg" alt="product-details" /> -->
+                                            <img src="assets/img/product/gold-necklace.jpeg" alt="product-details" />
                                         </div>
                                         <div class="pro-large-img img-zoom">
-                                            <img src="assets/img/product/product-details-img2.jpg" alt="product-details" />
+                                            <img src="assets/img/product/gold-necklace-details-1.jpeg" alt="product-details" />
                                         </div>
                                         <div class="pro-large-img img-zoom">
-                                            <img src="assets/img/product/product-details-img3.jpg" alt="product-details" />
+                                            <img src="assets/img/product/gold-necklace-details-1.jpeg" alt="product-details" />
                                         </div>
                                         <div class="pro-large-img img-zoom">
-                                            <img src="assets/img/product/product-details-img4.jpg" alt="product-details" />
+                                            <img src="assets/img/product/gold-necklace-details-1.jpeg" alt="product-details" />
                                         </div>
                                         <div class="pro-large-img img-zoom">
-                                            <img src="assets/img/product/product-details-img5.jpg" alt="product-details" />
+                                            <img src="assets/img/product/gold-necklace-details-1.jpeg" alt="product-details" />
                                         </div>
                                     </div>
                                     <div class="pro-nav slick-row-10 slick-arrow-style">
                                         <div class="pro-nav-thumb">
-                                            <img src="assets/img/product/product-details-img1.jpg" alt="product-details" />
+                                            <img src="assets/img/product/gold-necklace-details-1.jpeg" alt="product-details" />
                                         </div>
                                         <div class="pro-nav-thumb">
-                                            <img src="assets/img/product/product-details-img2.jpg" alt="product-details" />
+                                            <img src="assets/img/product/gold-necklace-details-1.jpeg" alt="product-details" />
                                         </div>
                                         <div class="pro-nav-thumb">
-                                            <img src="assets/img/product/product-details-img3.jpg" alt="product-details" />
+                                            <img src="assets/img/product/gold-necklace-details-1.jpeg" alt="product-details" />
                                         </div>
                                         <div class="pro-nav-thumb">
-                                            <img src="assets/img/product/product-details-img4.jpg" alt="product-details" />
+                                            <img src="assets/img/product/gold-necklace-details-1.jpeg" alt="product-details" />
                                         </div>
                                         <div class="pro-nav-thumb">
-                                            <img src="assets/img/product/product-details-img5.jpg" alt="product-details" />
+                                            <img src="assets/img/product/gold-necklace-details-1.jpeg" alt="product-details" />
                                         </div>
                                     </div>
                                 </div>
@@ -745,8 +746,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-11.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-8.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/diamond-ring.jpg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/diamond-rings.jpeg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -798,8 +799,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-12.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-7.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/mony-ring.jpeg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/mony-rings.jpg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -851,8 +852,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-13.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-6.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/diamond-earring.jpeg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/diamond-necklace.jpeg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -901,8 +902,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-14.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-5.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/diamond-ring.jpeg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/diamond-ring-1.jpeg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -954,8 +955,8 @@
                             <div class="product-item">
                                 <figure class="product-thumb">
                                     <a href="product-details.html">
-                                        <img class="pri-img" src="assets/img/product/product-15.jpg" alt="product">
-                                        <img class="sec-img" src="assets/img/product/product-4.jpg" alt="product">
+                                        <img class="pri-img" src="assets/img/product/gold-necklace.jpeg" alt="product">
+                                        <img class="sec-img" src="assets/img/product/gold-necklace-details-1.jpeg" alt="product">
                                     </a>
                                     <div class="product-badge">
                                         <div class="product-label new">
@@ -1129,7 +1130,8 @@
                             <div class="col-lg-5">
                                 <div class="product-large-slider">
                                     <div class="pro-large-img img-zoom">
-                                        <img src="assets/img/product/product-details-img1.jpg" alt="product-details" />
+                                        <!-- <img src="assets/img/product/product-details-img1.jpg" alt="product-details" /> -->
+                                        <img src="assets/img/product/gold-necklace.jpeg" alt="product-details" />
                                     </div>
                                     <div class="pro-large-img img-zoom">
                                         <img src="assets/img/product/product-details-img2.jpg" alt="product-details" />
